crates/config/src/snapshots/config__snapshot_tests__default_implant_config_toml.snap
---
source: crates/config/src/lib.rs
assertion_line: 18
expression: toml_str
---
server_public_key = ""
checkin_interval = 60
jitter_percent = 20
max_retries = 10
kill_date = 0

[[transports]]
transport_type = "https"
address = "https://127.0.0.1:443"

[profile]
user_agent = "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36"
checkin_uri = "/c"
task_uri = "/c"
request_headers = [
    [
    "Accept",
    "application/json",
],
    [
    "Accept-Language",
    "en-US,en;q=0.9",
],
]
response_headers = [[
    "Content-Type",
    "application/json",
]]
request_transform = "none"
response_transform = "none"
