crates/config/src/snapshots/config__snapshot_tests__full_implant_config_toml.snap
---
source: crates/config/src/lib.rs
assertion_line: 68
expression: toml_str
---
server_public_key = "abc123def456"
checkin_interval = 300
jitter_percent = 30
max_retries = 5
kill_date = 1735689600

[[transports]]
transport_type = "https"
address = "https://primary.c2.example.com:443"
cert_pin = "deadbeef"

[[transports]]
transport_type = "dns"
address = "8.8.8.8:53"

[transports.proxy]
proxy_type = "socks5"
address = "127.0.0.1:9050"
username = "user"
password = "pass"

[transports.dns]
domain = "c2.example.com"
max_label_size = 63
jitter_ms = [
    100,
    500,
]
timeout_secs = 5
max_retries = 3

[profile]
user_agent = "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36"
checkin_uri = "/c"
task_uri = "/c"
request_headers = [
    [
    "Accept",
    "application/json",
],
    [
    "Accept-Language",
    "en-US,en;q=0.9",
],
]
response_headers = [[
    "Content-Type",
    "application/json",
]]
request_transform = "none"
response_transform = "none"

[working_hours]
start_hour = 9
end_hour = 17
days = [
    1,
    2,
    3,
    4,
    5,
]
timezone_offset = -5
