crates/config/src/snapshots/config__snapshot_tests__transform_types.snap
---
source: crates/config/src/lib.rs
assertion_line: 85
expression: transforms
---
[
  "none",
  "base64",
  "base64url",
  "hex"
]
