crates/config/src/snapshots/config__snapshot_tests__transport_types.snap
---
source: crates/config/src/lib.rs
assertion_line: 74
expression: types
---
[
  "http",
  "https",
  "tcp",
  "dns"
]
